# MEPS

./: sas_analysis_structure.md
PySpark/: README.md
meps_python/: pyproject.toml
meps_python/analyses/legacy_exercises/: e1.py  e2.py  e3.py  e4.py  e5.py  e6.py  e7.py  e8.py  em1.py  em2.py  l1.py  l1a.py  l2.py  l3.py  l4.py  l5.py  m1.py  m10.py  m11.py  m2.py  m3.py  m4.py  m5.py  m6.py  m7.py  m8.py  m9.py
meps_python/analyses/summary_tables/: care_access_2017.py  care_access_2019.py  care_diabetes_a1c_2016.py  care_quality_2016.py  cond_expenditures_2015.py  cond_expenditures_2018.py  ins_age_2016.py  pmed_prescribed_drug_2016.py  pmed_therapeutic_class_2016.py  use_events_2016.py  use_expenditures_2016.py  use_expenditures_2019.py  use_race_sex_2016.py
meps_python/analyses/workshop_exercises/: cond_mv_2020.py  cond_pmed_2020.py  exercise_1a.py  exercise_1b.py  exercise_1c.py  exercise_2a.py  exercise_2b.py  exercise_2c.py  exercise_3a.py  exercise_3b.py  exercise_3c.py  exercise_3d.py  exercise_5a.py  exercise_5b.py  exercise_6a.py  exercise_6b.py  ggplot_example.py
meps_python/docs/: migration_mapping.md
meps_python/src/meps/: __init__.py
meps_python/src/meps/io/: __init__.py  downloaders.py  readers.py
meps_python/src/meps/survey/: __init__.py  design.py  estimators.py  regression.py  utils.py
meps_python/tests/integration/: test_pipeline.py
meps_python/tests/unit/: test_conditions.py  test_design.py  test_estimators.py  test_insurance.py  test_pooling.py  test_readers.py  test_regression.py
meps_python/tests/validation/: compare.py
(+220 files in other folders)
